--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ cffi==1.17.1
 Django==5.1.3
 django-filter==24.3
 djangorestframework==3.15.2
-psycopg2==2.9.10
+psycopg2-binary==2.9.10
 pycparser==2.22
 python-decouple==3.8
 setuptools==75.3.0
