--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-filter==24.3
 djangorestframework==3.15.2
 psycopg2-binary==2.9.10
 pycparser==2.22
+PyJWT==2.10.1
 python-decouple==3.8
 setuptools==75.3.0
 sqlparse==0.5.1
