--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,53 @@
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 asgiref==3.8.1
+astroid==3.3.9
+autopep8==2.0.4
+certifi==2025.1.31
 cffi==1.17.1
+charset-normalizer==3.4.1
+dill==0.3.9
 Django==5.1.3
+django-cors-headers==4.7.0
 django-filter==24.3
+django-redis==5.4.0
 djangorestframework==3.15.2
+docstring-to-markdown==0.16
+Faker==36.1.1
+faker-commerce==1.0.4
+flake8==7.1.2
+idna==3.10
+importlib_metadata==8.6.1
+isort==6.0.1
+jedi==0.19.2
+mccabe==0.7.0
+packaging==24.2
+parso==0.8.4
+platformdirs==4.3.7
+pluggy==1.5.0
 psycopg2-binary==2.9.10
+pycodestyle==2.12.1
 pycparser==2.22
+pydocstyle==6.3.0
+pyflakes==3.2.0
 PyJWT==2.10.1
+pylint==3.3.6
 python-decouple==3.8
+python-lsp-jsonrpc==1.1.2
+python-lsp-server==1.12.2
+pytoolconfig==1.3.1
+redis==5.2.1
+requests==2.32.3
+rope==1.13.0
 setuptools==75.3.0
+snowballstemmer==2.2.0
 sqlparse==0.5.1
+stripe==11.6.0
+tomlkit==0.13.2
+typing_extensions==4.13.0
+tzdata==2025.1
+ujson==5.10.0
+urllib3==2.3.0
+whatthepatch==1.0.7
+yapf==0.43.0
+zipp==3.21.0
